force-app/main/default/objects/ERP_Integration_Setting__mdt/ERP_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for ERP integration endpoints and behavior.</description>
    <label>ERP Integration Setting</label>
    <pluralLabel>ERP Integration Settings</pluralLabel>
</CustomObject>