force-app/main/default/objects/ERP_Integration_Setting__mdt/fields/API_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>API_Base_URL__c</fullName>
    <description>Base URL for the ERP REST API (e.g. http://localhost:3001/api/v2.0)</description>
    <label>API Base URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>