force-app/main/default/objects/ERP_Integration_Setting__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>API key for authenticating with the ERP system.</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>