force-app/main/default/objects/ERP_Integration_Setting__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this integration configuration is active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>