force-app/main/default/objects/ERP_Integration_Setting__mdt/fields/Max_Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry_Attempts__c</fullName>
    <description>Maximum number of retry attempts for failed sync operations.</description>
    <label>Max Retry Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>