force-app/main/default/objects/ERP_Integration_Setting__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Optional Named Credential API name for outbound callouts. When set, replaces API_Base_URL__c and Authorization header.</description>
    <label>Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>