force-app/main/default/objects/ERP_Integration_Setting__mdt/fields/Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Ms__c</fullName>
    <description>HTTP callout timeout in milliseconds.</description>
    <label>Timeout (ms)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>